[gd_scene load_steps=7 format=2]

[ext_resource path="res://Img/backgroundColorForest.png" type="Texture" id=1]
[ext_resource path="res://Crane2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Crane1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://fonts/28 Days Later.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -224.0
margin_right = 1024.0
margin_bottom = 800.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crane2" parent="." instance=ExtResource( 2 )]
position = Vector2( 280, 376 )
scale = Vector2( 0.598491, 0.598491 )

[node name="Crane1" parent="." instance=ExtResource( 3 )]
position = Vector2( 768, 400 )
scale = Vector2( 0.675523, 0.675523 )

[node name="ResultsLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 24.0
margin_top = 112.0
margin_right = 990.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.384314, 0.0392157, 1 )
text = "Vasya A D to move G to flip
Tolik keyboard arrows to move keypad 0 to flip
First one to flip wins
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crane1Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 880.0
margin_top = 16.0
margin_right = 1023.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.384314, 0.0392157, 1 )
text = "Tolik 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crane2Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 32.0
margin_top = 24.0
margin_right = 175.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.384314, 0.0392157, 1 )
text = "Vasya: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crane2LabelScore" type="Label" parent="."]
anchor_right = 1.0
margin_left = 240.0
margin_top = 24.0
margin_right = 383.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.384314, 0.0392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crane1LabelScore" type="Label" parent="."]
anchor_right = 1.0
margin_left = 784.0
margin_top = 16.0
margin_right = 824.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.384314, 0.0392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
[connection signal="score" from="Crane2" to="." method="_on_Crane2_score"]
[connection signal="score" from="Crane1" to="." method="_on_Crane1_score"]
[connection signal="timeout" from="StartTimer" to="." method="_on_Timer_timeout"]
